--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "@types/google-protobuf": "^3.15.6",
     "ant-design-vue": "^3.3.0-beta.3",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
+    "moment": "^2.29.4",
+    "ts-protoc-gen": "^0.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-perfect-scrollbar": "^1.6.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
