--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VUE_APP_WS_SERVICER=ws://localhost:13222/ws
-VUE_APP_WS_CUSTOMER=ws://localhost:13221/ws
+VUE_APP_WS_SERVICER=ws://localhost:13222/ws/servicer
+VUE_APP_WS_CUSTOMER=ws://localhost:13221/ws/customer
 VUE_APP_URL_BASE_CUSTOMER=/api
 VUE_APP_URL_BASE_SERVICER=/servicerapi
