--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "ts-protoc-gen": "^0.15.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.3.0-beta.10",
     "vue-router": "^4.0.3",
     "vue3-perfect-scrollbar": "^1.6.1",
     "vuex": "^4.0.0"
